crates/keron-lang/tests/corpus/errors/check/match_pattern_type_mismatch.keron
fn run(n: Int): Int {
  match n {
    "zero" => 0,
    _ => 1,
  }
}
